<resources>
    <string name="app_name">SpaceXProject</string>
    <string name="capsul_id">Capsul Id</string>
    <string name="capsule_serial">Capsule Serial</string>
    <string name="rocket_name">Rocket Name</string>
    <string name="click_for_more">Click For More</string>
    <string name="textview">TextView</string>
    <string name="textview3">TextView3</string>
    <string name="textview2">TextView2</string>
    <string name="textview4">TextView4</string>
    <string name="textview5">TextView5</string>
    <string name="textview6">TextView6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>