<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    android:gravity="center" >

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/successRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/textview2"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/stages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/textview3"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/firstLaunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/textview4"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/costPerLaunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/textview5"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/payload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/textview6"
        android:textColor="#000000"
        android:textSize="20sp" />
</LinearLayout>